--- a/Project2/app/src/main/res/layout/activity_main.xml
+++ b/Project2/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:layout_marginStart="21dp"
             android:layout_toEndOf="@+id/textViewUN"
             android:ems="10"
-            android:hint="Enter Username"
+            android:hint="@string/editText_userName"
             android:inputType="textPersonName" />
 
         <EditText
@@ -75,7 +75,7 @@
             android:layout_alignStart="@+id/editTextUN"
             android:layout_alignTop="@+id/textViewPW"
             android:ems="10"
-            android:hint="Enter Password"
+            android:hint="@string/editText_passWord"
             android:inputType="textPassword" />
 
         <Button
@@ -85,7 +85,8 @@
             android:layout_alignStart="@+id/textViewPW"
             android:layout_below="@+id/editTextPW"
             android:layout_marginTop="21dp"
-            android:text="USERNAME"
+            android:onClick='launchUNActivity'
+            android:text="@string/bttnUNText"
             android:textColor="#ff0000" />
 
         <Button
@@ -95,6 +96,7 @@
             android:layout_alignStart="@+id/bttnUN"
             android:layout_below="@+id/bttnUN"
             android:layout_marginTop="24dp"
+            android:onClick="launchPWActivity"
             android:text="PASSWORD"
             android:textColor="#ff0000" />
 
@@ -105,6 +107,7 @@
             android:layout_alignStart="@+id/bttnPW"
             android:layout_below="@+id/bttnPW"
             android:layout_marginTop="22dp"
+            android:onClick="launchLoginActivity"
             android:text="LOGIN"
             android:textColor="#ff0000" />
 
