Lab5 and Lab6 Updates
Updated Lab5 files and completed Lab6

--- a/Lab6/app/src/main/res/layout/activity_main.xml
+++ b/Lab6/app/src/main/res/layout/activity_main.xml
@@ -66,16 +66,6 @@
         android:hint="Enter Name"
         android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/studentGradeField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/studentNameField"
-        android:layout_alignTop="@+id/GradeTView"
-        android:ems="10"
-        android:hint="Enter Grade"
-        android:inputType="textPersonName" />
-
     <Button
         android:id="@+id/addStdntBttn"
         android:layout_width="wrap_content"
@@ -107,5 +97,15 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/findStdntBttn"
         android:text="DELETE STUDENT" />
+
+    <EditText
+        android:id="@+id/studentGradeField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/studentNameField"
+        android:layout_alignTop="@+id/GradeTView"
+        android:ems="10"
+        android:hint="Enter Grade"
+        android:inputType="number" />
 
 </RelativeLayout>
