--- a/Lab5/app/src/main/res/layout/activity_main.xml
+++ b/Lab5/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.josh.lab5.MainActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="#0000ff"
+        android:text="JOSHUA JADULCO"
+        android:textAlignment="center"
+        android:textColor="#ffff00"
+        android:textSize="24sp" />
+
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="#00ff00"
+        android:scrollbars="vertical"
+        android:layout_alignParentBottom="true"
+        />
+
+    <ListView
+        android:id="@+id/listView2"
+        android:layout_width="170dp"
+        android:layout_height="450dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/listView1"
+        android:background="#ffff00" />
+
+</RelativeLayout>
