--- a/Assignment3/app/src/main/res/layout/activity_main.xml
+++ b/Assignment3/app/src/main/res/layout/activity_main.xml
@@ -42,5 +42,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/bttnAddTeam"
-        android:layout_marginTop="12dp" />
+        android:layout_marginTop="12dp"
+        android:scrollbars="vertical" />
 </RelativeLayout>
