--- a/Assignment3/app/src/main/res/layout/activity_team_details.xml
+++ b/Assignment3/app/src/main/res/layout/activity_team_details.xml
@@ -16,7 +16,7 @@
         android:background="#ffff66">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -27,102 +27,104 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView5"
-            android:layout_marginTop="14dp"
+            android:layout_below="@+id/textView2"
+            android:layout_marginTop="18dp"
             android:text="CITY:"
+            android:textAllCaps="true"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView6"
-            android:layout_marginTop="13dp"
+            android:layout_below="@+id/textView3"
+            android:layout_marginTop="19dp"
             android:text="NAME:"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView7"
-            android:layout_marginTop="17dp"
+            android:layout_centerVertical="true"
             android:text="SPORT:"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView8"
-            android:layout_marginTop="21dp"
+            android:layout_below="@+id/textView11"
+            android:layout_marginTop="22dp"
             android:text="MVP:"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/textView9"
-            android:layout_marginTop="24dp"
+            android:layout_below="@+id/textView12"
+            android:layout_marginTop="22dp"
             android:text="STADIUM:"
             android:textSize="24sp" />
 
         <EditText
-            android:id="@+id/eTxtCity2"
+            android:id="@+id/editText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/textView6"
-            android:layout_alignBottom="@+id/textView6"
-            android:layout_alignStart="@+id/eTxtTeamName2"
+            android:layout_alignTop="@+id/textView3"
+            android:layout_toEndOf="@+id/textView13"
             android:ems="10"
+            android:hint="CITY"
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/eTxtTeamName2"
+            android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/eTxtSportCategory2"
-            android:layout_alignTop="@+id/textView7"
+            android:layout_alignStart="@+id/editText"
+            android:layout_alignTop="@+id/textView4"
             android:ems="10"
+            android:hint="TEAM NAME"
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/eTxtSportCategory2"
+            android:id="@+id/editText3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/eTxtMVP2"
-            android:layout_alignTop="@+id/textView8"
+            android:layout_alignStart="@+id/editText2"
+            android:layout_alignTop="@+id/textView11"
             android:ems="10"
+            android:hint="SPORT CATEGORY"
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/eTxtMVP2"
+            android:id="@+id/editText4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/eTxtStadium2"
-            android:layout_alignTop="@+id/textView9"
+            android:layout_alignStart="@+id/editText3"
+            android:layout_below="@+id/editText3"
             android:ems="10"
+            android:hint="TEAM MVP"
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/eTxtStadium2"
+            android:id="@+id/editText5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/textView10"
-            android:layout_marginLeft="5dp"
-            android:layout_toEndOf="@+id/textView10"
+            android:layout_alignTop="@+id/textView13"
+            android:layout_toEndOf="@+id/textView13"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:paddingLeft="10dp" />
+            android:hint="GAME STADIUM"
+            android:inputType="textPersonName" />
     </RelativeLayout>
 
     <Button
@@ -137,7 +139,7 @@
         android:textSize="24sp" />
 
     <Button
-        android:id="@+id/exitBttn3"
+        android:id="@+id/ebuttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/submitBttn"
